# ar600_description

./: .gitignore  README.md
src/a600_description/: CMakeLists.txt  package.xml
src/a600_description/config/: gazebo_controller.yaml  joint_names_a600_description.yaml
src/a600_description/launch/: display.launch  gazebo.launch  gazebo2 copy.launch  gazebo2.launch  gazebo_publ.launch  xacro.launch
src/a600_description/meshes/: L_FootR.STL  L_HipR.STL  R_FootR.STL  R_HipR.STL
src/a600_description/meshes_light/: L_FootR.STL  L_FootS.STL  L_HipR.STL  L_HipS.STL  L_Knee_upper.STL  R_FootR.STL  R_FootS.STL  R_HipR.STL  R_HipS.STL  R_Knee_Lower.STL  R_Knee_Upper.STL
src/a600_description/meshes_light1/: L_FootS.STL  L_HipR.STL  R_Knee_Upper.STL
src/a600_description/urdf/: a600_description.csv  a600_description.urdf  urdf.rviz
src/a600_description/xacro/: plugin.gazebo  (+9 more)
src/ar601_api/: constants.py  helpers.py  joints.py  robot.py  topics.py
src/ar601_kinematics/: CMakeLists.txt  package.xml
src/ar601_kinematics/include/: fk_com.h  fk_com.py  ik_com.py  ik_com_fix.py  ik_lr_12 (copy).h  ik_lr_12.h  joint_publisher_kinematics.py  utility.py
src/ar601_kinematics/launch/: ik_fk_service.launch  ik_fk_test.launch
src/ar601_kinematics/script/: fk_call.py  ik_call.py  joint_publisher.py  kin_publisher.py
src/ar601_kinematics/src/: fservice.cpp  iservice.cpp
src/ar601_kinematics/srv/: FK.srv  IK.srv
src/ar601_kinematics/test/: fk_test.py  ik_test.py
src/control/: control.py  control_joint_state.py  control_publisher.py  package.xml
src/dynamic_reconf_joints/: CMakeLists.txt  package.xml
(+12 files in other folders)
