<?xml version="1.0"?>
<package>
  <name>ar601_kinematics</name>
  <version>1.0.0</version>
  <description>The ar601_kinematics package</description>

  <maintainer email="asagitov@todo.todo">asagitov</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cmake_modules</run_depend>
  
  <export>
  </export>
</package>
